[DEV] Updated module-info to use java.desktop.